test/instance-checks-8.ktn
define example (->): ->x y; y x
